--- a/plugins/cordova-plugin-ionic-keyboard/package.json
+++ b/plugins/cordova-plugin-ionic-keyboard/package.json
@@ -22,7 +22,7 @@
   "_resolved": "https://registry.npmjs.org/cordova-plugin-ionic-keyboard/-/cordova-plugin-ionic-keyboard-2.0.5.tgz",
   "_shasum": "c7c35ffd8f6a1ef77e27a1eee70ccaa2e94f99e1",
   "_spec": "cordova-plugin-ionic-keyboard@2.0.5",
-  "_where": "C:\\Users\\national\\Desktop\\Numi\\nomi2",
+  "_where": "C:\\Users\\national\\Desktop\\Numi\\numi1",
   "author": {
     "name": "Apache Software Foundation"
   },
